--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -1,4 +1,10 @@
-body 
-	font-family: Georgia, 'Times New Roman', Times, serif
-	background: url(../img/bg/body-bg.png) 0 0 / cover
++font('bebas',bebas-webfont)
+
+=bebas
+	font-family: bebas,sans-serif 
+
+body
+	font-family: Helvetica,sans-serif 
+
+
  
