--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -16,15 +16,15 @@
 .logo
 	font-size: 36px
 	color: #e8603c
-	// +bebas
+	+bebas
 	&__Ro
 		color: #f3af9d
 
 .navigation
 	font-size: 16px
-	// +bebas
 	position: relative
 	top: -6px
+	+bebas
 	a
 		color: #b9b9b9
 		margin-left: 24px
@@ -49,4 +49,29 @@
 	&__next
 		left: auto
 		right: 20px
-
+.inner
+	max-width: 650px
+	width: 100%
+	display: flex
+	margin-top: 22px
+	&__info
+		margin-bottom: 15px
+	&__wrap
+		min-width: 23%
+	&__link
+		display: block
+	&__description
+		font-size: 12px
+		color: #bababa
+		white-space: nowrap
+	&__heading
+		font-size: 12px
+		color: #e8603c
+		text-transform: uppercase
+		line-height: 20px
+		margin-bottom: 5px
+	&__title
+		+bebas
+		font-size: 18px
+		color: #e8603c
+		text-transform: uppercase
