--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -35,58 +35,57 @@
 <!-- end blog -->
 <!-- slider -->
 <main class="main">
-    <div class="container">
-      <div class="slider section-top">
-        <div class="slider__next">
-          <svg class="icon icon-arrow">
-            <use xlink:href="img/sprite.svg#icon-arrow"></use>
-          </svg>
+  <div class="container">
+    <div class="slider section-top">
+      <div class="slider__next">
+        <svg class="icon icon-arrow">
+          <use xlink:href="img/sprite.svg#icon-arrow"></use>
+        </svg>
+      </div>
+      <div class="slider__prev">
+        <svg class="icon icon-arrow">
+          <use xlink:href="img/sprite.svg#icon-arrow"></use>
+        </svg>
+      </div>
+      <div class="slider__slides js-main">
+        <div class="slider__slide slide" style="background: url(img/slide.png);">
         </div>
-        <div class="slider__prev">
-          <svg class="icon icon-arrow">
-            <use xlink:href="img/sprite.svg#icon-arrow"></use>
-          </svg>
+        <div class="slider__slide slide" style="background: url(img/slide.png);">
         </div>
-        <div class="slider__slides" js-main>
-          <div class="slider__slide slide" style="background: url(../img/slide.png);"> </div>
-          <div class="slider__slide slide" style="background: url(../img/slide.png);">
-      
-    </div>
-    <div class="slider__slide slide" style="background: url(../img/slide.png);">
-      
-    </div></div>
-        <div class="inner">
-          <div class="inner__wrap">
-          <div class="inner__info">
-            <a href="#" class="inner__link">
-              <h3 class="inner__heading">date</h3>
-              <h4 class="inner__description">April 15, 2012</h4>
-            </a>
-          </div>
-          <div class="inner__info">
-            <a href="#" class="inner__link">
-              <h3 class="inner__heading">tags</h3>
-              <h4 class="inner__description">Website  |  Design</h4>
-            </a>
-          </div>
-          <div class="inner__info">
-            <a href="#" class="inner__link">
-              <h3 class="inner__heading">comments</h3>
-              <h4 class="inner__description">April 15, 2012</h4>
-            </a>
-          </div>
-        </div>
-          <div class="inner__promo">
-            <h3>Top WordPress Themes of 2012</h3>
-            <p>Lorem ipsum dolor sit amet, sit an molestie neglegentur concludaturque. Possim hendrerit in usu. Iriure delectus mea at, vis dicit laudem ex, vel eu possim imperdiet consequuntur. Brute ipsum tincidunt vim ei. Ne eos vidisse splendide
-              instructior. Mei no latine praesent forensibus, te sed habemus tacimates, ad ipsum officiis constituto usu. </p>
-            <p> Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posuere ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis
-              ... </p>
-          </div>
+        <div class="slider__slide slide" style="background: url(img/slide.png);">
         </div>
       </div>
     </div>
-  </main>
+    <div class="inner">
+      <div class="inner__wrap">
+        <div class="inner__info">
+          <a href="#" class="inner__link">
+            <h3 class="inner__heading">date</h3>
+            <h4 class="inner__description">April 15, 2012</h4>
+          </a>
+        </div>
+        <div class="inner__info">
+          <a href="#" class="inner__link">
+            <h3 class="inner__heading">tags</h3>
+            <h4 class="inner__description">Website | Design</h4>
+          </a>
+        </div>
+        <div class="inner__info">
+          <a href="#" class="inner__link">
+            <h3 class="inner__heading">comments</h3>
+            <h4 class="inner__description">April 15, 2012</h4>
+          </a>
+        </div>
+      </div>
+      <div class="inner__promo">
+        <h3 class="inner__heading">Top WordPress Themes of 2012</h3>
+        <p>Lorem ipsum dolor sit amet, sit an molestie neglegentur concludaturque. Possim hendrerit in usu. Iriure delectus mea at, vis dicit laudem ex, vel eu possim imperdiet consequuntur. Brute ipsum tincidunt vim ei. Ne eos vidisse splendide instructior. Mei no latine praesent forensibus, te sed habemus tacimates, ad ipsum officiis constituto usu. </p>
+        <p> Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posuere ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis ... </p>
+      </div>
+    </div>
+  </div>
+  </div>
+</main>
 {# variable example #}
 <h1>{{title}}</h1>
 
