--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1,8 +1,9 @@
 .container
 	max-width: 940px
 	margin: 0 auto;
+	+r(960)
+		margin: 0 10px
 .header
-
 	&__wrap
 		display: flex
 		text-align: left
@@ -32,6 +33,7 @@
 			color: #e8663c
 
 .blog
+	overflow: hidden
 	margin-bottom: 24px	
 	&__heading
 		position: relative
@@ -48,7 +50,7 @@
 			height: 61px 
 			background: #f2ae9c
 			content: "" 
-			width: 1000px
+			width: 100%
 			top: 0 
 		&:before
 			right: 100%
@@ -59,6 +61,7 @@
 
 .section-top
 	max-width: 670px
+	margin-bottom: 20px
 
 .slider
 	position: relative 
@@ -70,22 +73,22 @@
 		cursor: pointer
 		z-index: 50 
 		font-size: 54px 
-		margin-top: -27px 
+		margin-top: -25px 
 	&__next
 		left: auto
 		right: 20px  
 		transform: rotate(-180deg)
-.slide
-	position: relative
-	height: 0
-	padding-bottom: 44% 
+	&__slide
+		position: relative
+		height: 0
+		padding-bottom: 44.8% 
 
 
 .inner
+	position: relative
 	max-width: 650px
 	width: 100%
 	display: flex
-	margin-top: 22px
 	&__info
 		margin-bottom: 15px
 	&__wrap
@@ -100,11 +103,33 @@
 		font-size: 12px
 		color: #e8603c
 		text-transform: uppercase
-		line-height: 20px
+		line-height: 1.6
 		margin-bottom: 5px
 		+bebas
 	&__title
 		+bebas
 		font-size: 18px
+		line-height: 1
 		color: #e8603c
 		text-transform: uppercase
+		margin-bottom: 20px
+		&+p
+			margin-bottom: 25px
+	&__dot
+		color: #8caf2f
+	&:before
+		position: absolute
+		content: ""
+		margin-top: 40px
+		background: url('../img/pattern.png') 0 0
+		bottom: -40px
+		height: 14px
+		width: 100%
+.inner__promo
+		p 
+			font-family: Helvetica, sans-serif 
+			font-size: 12px
+			line-height: 1.5
+			color: #414141
+			font-style: normal
+		
