--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -35,19 +35,12 @@
 <!-- end blog -->
 <!-- slider -->
 <main class="main">
-  <div class="container">
-    <div class="slider section-top">
-        <div>{{mixins.icon('doc')}}</div>
-      <div class="slider__next">
-        <svg class="icon icon-arrow">
-          <use xlink:href="img/sprite.svg#icon-arrow"></use>
-        </svg>
-      </div>
-      <div class="slider__prev">
-        <svg class="icon icon-arrow">
-          <use xlink:href="img/sprite.svg#icon-arrow"></use>
-        </svg>
-      </div>
+  <div class="container main-blog">
+    <div>
+    <div class="main__wrap">
+    <div class="slider section">
+        <div class="slider__next">{{mixins.icon('arrow')}}</div>
+        <div class="slider__prev">{{mixins.icon('arrow')}}</div>
       <div class="slider__slides js-main">
         <div class="slider__slide" style="background: url(img/slide.png);">
         </div>
@@ -57,6 +50,7 @@
         </div>
       </div>
     </div>
+  
     <div class="inner">
       <div class="inner__wrap">
         <div class="inner__info">
@@ -83,10 +77,57 @@
         <p>Lorem ipsum dolor sit amet, sit an molestie neglegentur concludaturque. Possim hendrerit in usu. Iriure delectus mea at, vis dicit laudem ex, vel eu possim imperdiet consequuntur. Brute ipsum tincidunt vim ei. Ne eos vidisse splendide instructior. Mei no latine praesent forensibus, te sed habemus tacimates, ad ipsum officiis constituto usu. </p>
         <p> Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posuere ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis <span class="inner__dot">...</span></p>
       </div>
-      
     </div>
+ 
+    </div>
+    <div class="main__wrapp-middle">
+        <div class="slider section">
+           
+          <div class="slider__slides js-main">
+            <div class="slider__slide" style="background: url(img/slide-middle.png);">
+            </div>
+            <div class="slider__slide" style="background: url(img/slide-middle.png);">
+            </div>
+            <div class="slider__slide" style="background: url(img/slide-middle.png);">
+            </div>
+          </div>
+        </div>
+      
+        <div class="inner">
+          <div class="inner__wrap">
+            <div class="inner__info">
+              <a href="#" class="inner__link">
+                <h3 class="inner__heading">date</h3>
+                <h4 class="inner__description">April 15, 2012</h4>
+              </a>
+            </div>
+            <div class="inner__info">
+              <a href="#" class="inner__link">
+                <h3 class="inner__heading">tags</h3>
+                <h4 class="inner__description">Website | Design</h4>
+              </a>
+            </div>
+            <div class="inner__info">
+              <a href="#" class="inner__link">
+                <h3 class="inner__heading">comments</h3>
+                <h4 class="inner__description">4</h4>
+              </a>
+            </div>
+          </div>
+          <div class="inner__promo">
+            <h3 class="inner__title">Top WordPress Themes of 2012</h3>
+            <p>Lorem ipsum dolor sit amet, sit an molestie neglegentur concludaturque. Possim hendrerit in usu. Iriure delectus mea at, vis dicit laudem ex, vel eu possim imperdiet consequuntur. Brute ipsum tincidunt vim ei. Ne eos vidisse splendide instructior. Mei no latine praesent forensibus, te sed habemus tacimates, ad ipsum officiis constituto usu. </p>
+            <p> Maecenas ipsum metus, semper hendrerit varius mattis, congue sit amet tellus. Aliquam ullamcorper dui sed magna posuere ut elementum enim rutrum. Nam mi erat, porta id ultrices nec, pellentesque vel nunc. Cras varius fermentum iaculis <span class="inner__dot">...</span></p>
+          </div>
+        </div>
+        </div>
+        
   </div>
+   <aside class="aside">ddddd  </aside> 
+  </div>
+
 </main>
+
 {# variable example #}
 <h1>{{title}}</h1>
 
