--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -4,7 +4,19 @@ body
 	font-family: Helvetica,sans-serif 
 
 =bebas
-	font-family: bebas,sans-serif 
+	font-family: bebas,sans-serif
+
+.img-fluid,
+.img-fluid-a 
+    width: 100%
+    display: block
+    height: auto
+    align-self: center
+
+.img-fluid-a
+    width: initial
+    max-width: 100%
+
 
 
 
