--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -63,6 +63,8 @@
 .main
 	&__wrap,&__wrapp-middle,&__wrapp-bottom
 		position: relative
+		padding-bottom: 64px
+		margin-bottom: 55px
 		&:before
 			position: absolute
 			content: ""
@@ -74,11 +76,20 @@
 			z-index: 100
 			right: 100%
 			margin-right: 10px
-
+		&:after
+			position: absolute
+			content: ""
+			background: url('../img/pattern.png') 0 0
+			bottom: 0
+			height: 14px
+			width: 100%
+			
 	&__wrapp-middle
+		
 		&:before
 			background: url("../icons/middle-icon.png") no-repeat;
 	&__wrapp-bottom
+		margin-bottom: 46px
 		&:before
 			background: url("../icons/bottom-icon.png") no-repeat;
 
@@ -112,7 +123,6 @@
 	max-width: 650px
 	width: 100%
 	display: flex
-	margin-bottom: 70px
 	&__info
 		margin-bottom: 15px
 	&__wrap
@@ -142,12 +152,7 @@
 	&__dot
 		color: #8caf2f
 	&:before
-		position: absolute
-		content: ""
-		background: url('../img/pattern.png') 0 0
-		bottom: -40px
-		height: 14px
-		width: 100%
+		
 .inner__promo
 		p 
 			font-size: 12px
@@ -179,6 +184,56 @@ aside
 		margin-left: 20px  
 		background: url(../img/pattern.png) 0 0 
 .categories
+	margin-bottom: 35px
 	&__list
 		font-size: 12px
+
+.blockquote
+	padding-bottom: 64px
+	margin-bottom: 55px
+	&__wrapper
+		background: #f4f4f4
+
+.main__blockquote
+	position: relative
+	&:before
+			position: absolute
+			content: ""
+			top: 0
+			height: 75px
+			width: 75px
+			background: url("../icons/blockquote-icon.png") no-repeat;
+			background-size: cover
+			z-index: 100
+			right: 100%
+			margin-right: 10px
+	&:after
+			position: absolute
+			content: ""
+			background: url('../img/pattern.png') 0 0
+			bottom: 0
+			height: 14px
+			width: 100%	
+	p
+		position: relative
+		font-size: 13px
+		color: #474747
+		line-height: 1.3
+		font-style: italic
+		margin-left: 67px
+		padding: 25px 30px 18px 26px
+		&:after
+			position: absolute
+			content: '"'
+			display: block
+			bottom: 16%
+			right: 100%
+			font-family: "Georgia"
+			font-size: 72px
+			color: #e8603c
+			transform: rotate(-180deg)
+			
+
+
+	
 		
