--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -232,8 +232,49 @@ aside
 			font-size: 72px
 			color: #e8603c
 			transform: rotate(-180deg)
-			
 
+.main__freebies
+	position: relative
+	&:before
+			position: absolute
+			content: ""
+			top: 0
+			height: 75px
+			width: 75px
+			background: url("../icons/link-icon.png") no-repeat;
+			background-size: cover
+			z-index: 100
+			right: 100%
+			margin-right: 10px
+	&:after
+			position: absolute
+			content: ""
+			background: url('../img/pattern.png') 0 0
+			bottom: 0
+			height: 14px
+			width: 100%
+	&-wrapper
+		margin-bottom: 55px
+		padding-bottom: 64px
+	&-wrap
+		margin-bottom: 20px
+	&-title
+		font-size: 18px
+		color:#e8603c
+		text-transform: uppercase
+		line-height: 1.5
+		+bebas
+	&-link
+		font-size: 12px
+		color: #a0a0a0
+	&-description
+		font-size: 12px
+		line-height: 1.5
+		color: #414141
 
-	
-		
+main__pagination
+	display: flex
+	&-page
+		font-size: 14px
+		color: #fff
+		+bebas
