--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -224,9 +224,9 @@ aside
 		padding: 25px 30px 18px 26px
 		&:after
 			position: absolute
-			content: '"'
+			content: ',,'
 			display: block
-			bottom: 16%
+			top: 16%
 			right: 100%
 			font-family: "Georgia"
 			font-size: 72px
@@ -272,9 +272,18 @@ aside
 		line-height: 1.5
 		color: #414141
 
-main__pagination
+.main__pagination
 	display: flex
+	margin-bottom: 300px
 	&-page
 		font-size: 14px
 		color: #fff
+		background: #f3b29d
+		height: 26px
+		width: 26px
+		padding: 6px 12px 7px 10px
+		margin-right: 4px
 		+bebas
+		&.is-active,&:hover
+			background: #e8603c
+			cursor: pointer
