--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -209,10 +209,10 @@
           </p>
         </div>
       </div>
-      <div class="main__pagination">
-        <div class="main__pagination-page">1</div>
-        <div class="main__pagination-page">2</div>
-        <div class="main__pagination-page">3</div>
+      <div class="pagination">
+        <div class="pagination__page"><a href="#">1</a></div>
+        <div class="pagination__page"><a href="#">2</a></div>
+        <div class="pagination__page"><a href="#">3</a></div>
       </div>
     </div>
     <aside class="aside">
@@ -268,31 +268,36 @@
           </h3>
           <figure>
             <a href="">
-              <img src="../img/pg-img.png" alt="" class="img-fluid">
+              <img src="../img/pg-img.png" alt="" class="img-fluid"/>
             </a>
             <a href="">
-              <img src="../img/pg-img.png" alt="" class="img-fluid">
+              <img src="../img/pg-img.png" alt="" class="img-fluid"/>
             </a>
             <a href="">
-              <img src="../img/pg-img.png" alt="" class="img-fluid">
+              <img src="../img/pg-img.png" alt="" class="img-fluid"/>
             </a>
             <a href="">
-              <img src="../img/pg-img.png" alt="" class="img-fluid">
+              <img src="../img/pg-img.png" alt="" class="img-fluid"/>
             </a>
             <a href="">
-              <img src="../img/pg-img.png" alt="" class="img-fluid">
+              <img src="../img/pg-img.png" alt="" class="img-fluid"/>
             </a>
             <a href="">
-              <img src="../img/pg-img.png" alt="" class="img-fluid">
+              <img src="../img/pg-img.png" alt="" class="img-fluid"/>
             </a>
             <a href="">
-              <img src="../img/pg-img.png" alt="" class="img-fluid">
+              <img src="../img/pg-img.png" alt="" class="img-fluid"/>
             </a>
             <a href="">
-              <img src="../img/pg-img.png" alt="" class="img-fluid">
+              <img src="../img/pg-img.png" alt="" class="img-fluid"/>
             </a>
           </figure>
         </div>
+        <div class="pagination none">
+            <div class="pagination__page"><a href="#">1</a></div>
+            <div class="pagination__page"><a href="#">2</a></div>
+            <div class="pagination__page"><a href="#">3</a></div>
+          </div>
       </div>
     </aside>
   </div>
