--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1,315 +1,176 @@
-.container
-	max-width: 940px
-	margin: 0 auto;
-	+r(960)
-		margin: 0 10px
-.header
-	&__wrap
-		display: flex
-		text-align: left
-		padding: 22px 0
-		align-items: baseline
-		+r(620)
+.head
+  display: flex
+  padding: 22px 0
+  align-items: flex-end
+  text-align: left
+  +bebas
+  text-transform: uppercase
+  +r(620)
 			display: block
 			text-align: center
-	&__logo
-		text-transform: uppercase
-		+r(620)
-			margin-bottom: 20px
-	&__nav
-		text-transform: uppercase
-		margin-left: auto
-		top: -6px
+  &__logo
+    +r(620)
+      margin-bottom: 20px
 .logo
-	font-size: 0
-	color: $is-active
-	+bebas
-	&__Jet,&__Ro
-		font-size: 36px
-	&__Ro
-		color: #f3af9d
+  color: $is-active
+  font-size: 36px
 
-.navigation
-	font-size: 16px
-	position: relative
-	
-	+bebas
-	a
-		color: #b9b9b9
-		margin-left: 24px
-		&.is-active,&:hover
-			color: $is-active
+  &__part_lighter
+    color: $is-lighter-active
 
-.blog
-	overflow: hidden
-	margin-bottom: 24px	
-	&__heading
-		position: relative
-		font-size: 24px
-		line-height: 1.3
-		color: #fff;
-		padding: 15px 0 15px 18px
-		text-transform: uppercase
-		background: $is-active
-		+bebas
-		&:before,
-		&:after
-			position: absolute
-			height: 61px 
-			background: #f2ae9c
-			content: "" 
-			width: 100%
-			top: 0 
-		&:before
-			right: 100%
-			margin-right: 10px  
-		&:after
-			left: 100%
-			margin-left: 10px
-.main-blog
-	display: flex
-	+r(960)
-		display: block
-		margin: 0 10px
-.main
-	&__wrap,&__wrapp-middle,&__wrapp-bottom
-		position: relative
-		padding-bottom: 64px
-		margin-bottom: 55px
-		&:before
-			position: absolute
-			content: ""
-			top: 0
-			height: 75px
-			width: 75px
-			background: url("../icons/top-icon.png") no-repeat;
-			background-size: cover
-			z-index: 100
-			right: 100%
-			margin-right: 10px
-		&:after
-			position: absolute
-			content: ""
-			background: url('../img/pattern.png') 0 0
-			bottom: 0
-			height: 14px
-			width: 100%
-			
-	&__wrapp-middle
-		
-		&:before
-			background: url("../icons/middle-icon.png") no-repeat;
-	&__wrapp-bottom
-		margin-bottom: 46px
-		&:before
-			background: url("../icons/bottom-icon.png") no-repeat;
+.head__nav
+  margin-left: auto
+.nav
+  font-size: 16px
+  color: #b9b9b9
+  padding-bottom: 6px
+  &__link
+    margin-left: 24px
+.title
+  overflow: hidden
+  margin-bottom: 24px
+  &__heading
+    position: relative
+    +bebas 
+    text-transform: uppercase
+    background: $is-active
+    color: #fff
+    font-size: 24px
+    line-height: 1.3
+    padding: 15px 0px 15px 18px
+    &:before,&:after
+      content: ""
+      position: absolute
+      height: 61px
+      background: $is-lighter-active
+      width: 100%
+      top: 0
+    &:before
+      right: 100%
+      margin-right: 10px
+    &:after
+      left: 100%
+      margin-left: 10px
+.blog-post
+  display: flex
+  flex-wrap: wrap
+  &__main
+    width: 72%
+    margin-right: 50px
+    +r(960)
+      width: 100%
+      margin-right: 0
+      order: 2
+  &__aside
+    flex: 1
+    +r(960)
+      -ms-flex-order: 1
 
-.section
-	max-width: 670px
-	margin-bottom: 20px
-		
+
 .slider
-	position: relative 
-	&__next,
-	&__prev
-		position: absolute
-		top: 50%
-		left: 20px  
-		cursor: pointer
-		z-index: 50 
-		font-size: 54px 
-		margin-top: -25px 
-	&__next
-		left: auto
-		right: 20px
-		margin-top: -42px  
-		transform: rotate(-180deg)
-	&__slide
-		position: relative
-		height: 0
-		padding-bottom: 44.8% 
+  position: relative
+  margin-bottom: 24px
+  &__next,
+  &__prev
+    position: absolute
+    top: 50%
+    left: 20px  
+    cursor: pointer
+    z-index: 50 
+    font-size: 54px 
+    margin-top: -25px 
+  &__next
+    left: auto
+    right: 20px
+    margin-top: -42px  
+    transform: rotate(-180deg)
 
+.slider-slides__bg
+  position: relative
+  height: 0
+  padding-bottom: 44.8%
 
-.inner
-	position: relative
-	max-width: 650px
-	width: 100%
-	display: flex
-	&__info
-		margin-bottom: 15px
-	&__wrap
-		min-width: 23%
-	&__link
-		display: block
-	&__description
-		font-size: 12px
-		color: #bababa
-		white-space: nowrap
-	&__heading
-		font-size: 12px
-		color: $is-active
-		text-transform: uppercase
-		line-height: 1.6
-		margin-bottom: 5px
-		+bebas
-	&__title
-		+bebas
-		font-size: 18px
-		line-height: 1
-		color: $is-active
-		text-transform: uppercase
-		margin-bottom: 20px
-		&+p
-			margin-bottom: 25px
-	&__dot
-		color: #8caf2f
-	&:before
-		
-.inner__promo
-		p 
-			font-size: 12px
-			line-height: 1.5
-			color: #414141
-			font-style: normal
-aside
-	margin-left: 50px
-	color: #464646
-	+r(960)
-		margin-left: 0
-		float: left
-.about
-		margin-bottom: 35px
-		&__description
-			font-size: 12px
-			line-height: 1.2
-			font-style: normal
-			font-weight: normal
-
-.h3
-	display: flex
-	font-size: 14px
-	line-height: 1
-	text-transform: uppercase
-	color: $is-active
-	margin-bottom: 23px
-	+bebas
-	&:after
-		content: "" 
-		flex: 1
-		margin-left: 20px  
-		background: url(../img/pattern.png) 0 0 
-.categories
-	margin-bottom: 35px
-	&__list
-		font-size: 12px
-figure
-	+r(960)
-		display: flex
-		justify-content: center
-		margin-bottom: 40px
+.promo-inner
+  display: flex
+  padding-right: 7px
+  +r(620)
+    flex-direction: column
+  &__tab
+    min-width: 21%
+    margin-right: 6px
+    +r(620)
+      display: flex
+      justify-content: space-between
+      margin-bottom: 40px
+.bottom-line
+  background: url('../img/pattern.png')
+  height: 14px
+  margin-bottom: 46px
+.description__heading
+  +bebas
+  margin-bottom: 20px
+.description__text
+  margin-bottom: 22px
 .blockquote
-	padding-bottom: 64px
-	margin-bottom: 55px
-	&__wrapper
-		background: #f4f4f4
+  background: #f5f5f5
+.blockquote-block
+  display: flex
+  padding-top: 20px
+  margin-bottom: 50px  
+.blockquote-block__text
+  font-size: 13px
+  font-style: italic
+  color: #474747
+.blockquote-block__comma
+  font-family: Georgia, 'Times New Roman', Times, serif
+  font-size: 72px
+  transform: rotate(180deg)
+  line-height: 1
+  color: $is-active
+  padding-right: 32px
+  padding-left: 12px
+  margin-bottom: -23px
+.link
+  margin-bottom: 50px
+  &__heading
+    +bebas
+    word-spacing: 2px
+    margin-bottom: 10px
+  &__bestpsd
+    font-size: 12px
+    color: #a0a0a0
+    margin-bottom: 25px
+.aside-about,.aside__categories
+  margin-bottom: 35px
+.categories-list
+  font-size: 12px
+  color: #464646
+  &__link
+    margin-bottom: 5px
+figure
+  +r(960)
+    display: flex
+    justify-content: center
+    margin-bottom: 50px
 
-.main__blockquote
-	position: relative
-	&:before
-			position: absolute
-			content: ""
-			top: 0
-			height: 75px
-			width: 75px
-			background: url("../icons/blockquote-icon.png") no-repeat;
-			background-size: cover
-			z-index: 100
-			right: 100%
-			margin-right: 10px
-	&:after
-			position: absolute
-			content: ""
-			background: url('../img/pattern.png') 0 0
-			bottom: 0
-			height: 14px
-			width: 100%	
-	p
-		position: relative
-		font-size: 13px
-		color: #474747
-		line-height: 1.3
-		font-style: italic
-		margin-left: 67px
-		padding: 25px 30px 18px 26px
-		&:after
-			position: absolute
-			content: ',,'
-			display: block
-			top: 16%
-			right: 100%
-			font-family: "Georgia"
-			font-size: 72px
-			color: $is-active
-			transform: rotate(-180deg)
 
-.main__freebies
-	position: relative
-	&:before
-			position: absolute
-			content: ""
-			top: 0
-			height: 75px
-			width: 75px
-			background: url("../icons/link-icon.png") no-repeat;
-			background-size: cover
-			z-index: 100
-			right: 100%
-			margin-right: 10px
-	&:after
-			position: absolute
-			content: ""
-			background: url('../img/pattern.png') 0 0
-			bottom: 0
-			height: 14px
-			width: 100%
-	&-wrapper
-		margin-bottom: 55px
-		padding-bottom: 64px
-	&-wrap
-		margin-bottom: 20px
-	&-title
-		font-size: 18px
-		color $is-active
-		text-transform: uppercase
-		line-height: 1.5
-		+bebas
-	&-link
-		font-size: 12px
-		color: #a0a0a0
-	&-description
-		font-size: 12px
-		line-height: 1.5
-		color: #414141
 
 .pagination
-	display: flex
-	margin-bottom: 300px
-	+r(960)
-		display: none
-	&__page
-		font-size: 14px
-		color: #fff
-		background: #f3b29d
-		height: 26px
-		width: 26px
-		padding: 6px 12px 7px 10px
-		margin-right: 4px
-		+bebas
-		&.is-active,&:hover
-			background: $is-active
-			cursor: pointer
-.none
-	display: none
-	+r(960)
-		display: flex
-		justify-content: center
+  display: flex
+  margin-bottom: 300px
+  +r(960)
+  margin-bottom: 50px
+.page-pagination
+    font-size: 14px
+    color: #fff
+    background: $is-lighter-active
+    height: 26px
+    width: 26px
+    padding: 6px 12px 7px 10px
+    margin-right: 4px
+    +bebas
+    &:hover
+      background: $is-active
+      cursor: pointer
+      color: #fff
+
