--- a/src/sass/helpers/_reset.sass
+++ b/src/sass/helpers/_reset.sass
@@ -131,3 +131,6 @@ span,
     display: inline-flex
     text-decoration: none
     color: inherit
+@media (prefers-reduced-motion: reduce)
+    *
+        transition: none !important
