--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -63,5 +63,25 @@ a:hover
         flex: 1
         margin-left: 20px
         background: url('../img/pattern.png') 0 0
-.rel
-    
+.icons
+    background: $is-active
+    height: 75px;
+    width: 75px
+    position: absolute
+    right: 100%
+    margin-right: 10px
+
+.icons_slide-1,.icons_slide-2,.icons_video,.icons_blockquote,.icons_link
+    background-repeat: no-repeat
+    background-position: 50% 50%
+
+.icons_slide-1
+      background-image: url('../img/icon-slide-1.png')
+.icons_slide-2
+    background-image: url('../img/icon-slide-2.png')
+.icons_video
+    background-image: url('../img/icon-play.png')
+.icons_blockquote
+    background-image: url('../img/icon-quotes.png')
+.icons_link
+    background-image: url('../img/icon-link.png')
