--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -55,7 +55,7 @@
   display: flex
   flex-wrap: wrap
   &__main
-    width: 72%
+    width: 71%
     margin-right: 50px
     +r(960)
       width: 100%
@@ -66,7 +66,8 @@
     +r(960)
       -ms-flex-order: 1
 
-
+.post
+  position: relative
 .slider
   position: relative
   margin-bottom: 24px
@@ -113,9 +114,10 @@
   margin-bottom: 22px
 .blockquote
   background: #f5f5f5
+  position: relative
 .blockquote-block
   display: flex
-  padding-top: 20px
+  padding-top: 27px
   margin-bottom: 50px  
 .blockquote-block__text
   font-size: 13px
@@ -132,6 +134,7 @@
   margin-bottom: -23px
 .link
   margin-bottom: 50px
+  position: relative
   &__heading
     +bebas
     word-spacing: 2px
@@ -139,7 +142,7 @@
   &__bestpsd
     font-size: 12px
     color: #a0a0a0
-    margin-bottom: 25px
+    margin-bottom: 20px
 .aside-about,.aside__categories
   margin-bottom: 35px
 .categories-list
@@ -150,7 +153,7 @@
 figure
   +r(960)
     display: flex
-    justify-content: center
+    justify-content: space-evenly
     margin-bottom: 50px
 
 
