--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -35,8 +35,9 @@
   <div class="blog-post">
     <div class="blog-post__main">
       <div class="post">
-        <div class="icon icon_slide-1"></div>
+        
         <div class="slider">
+            <div class="icons icons_slide-1"></div>
           <div class="slider__next">{{mixins.icon('arrow')}}</div>
           <div class="slider__prev">{{mixins.icon('arrow')}}</div>
           <div class="slider-slides js-post">
@@ -95,8 +96,8 @@
       </div>
 
       <div class="post">
-        <div class="icon icon_slide-2"></div>
         <div class="slider">
+            <div class="icons icons_slide-2"></div>
           <div class="slider-slides js-post-2">
             <div class="slider-slides__bg" style="background-image: url('img/slide-2.png'); background-size: cover">
             </div>
@@ -111,16 +112,24 @@
             <div class="promo-inner__tab">
               <div class="tab-date">
                 <h3 class="tab-date__heading h3-heading_bebas">Date</h3>
-                <span class="tab-date__dny date__dny_another span_mod">Jule 25, 2018</span>
+                <span class="tab-date__dny date__dny_another span_mod">
+                  <a href="#">Jule 25, 2018</a>
+                </span>
               </div>
               <div class="tab-tags">
                 <h3 class="tab-tags__tags h3-heading_bebas">Tags</h3>
-                <span class="tag tags_1 span_mod">Website</span>
-                <span class="tag tags_2 span_mod">Design</span>
+                <span class="tag tags_1 span_mod">
+                  <a href="#">Website</a>
+                </span>
+                <span class="tag tags_2 span_mod">
+                  <a href="#">Design</a>
+                </span>
               </div>
               <div class="tab-comments">
                 <h3 class="tab-comments__comments h3-heading_bebas">comments</h3>
-                <span class="tab-comments__quantity quantity_tab-comments span_mod">4</span>
+                <span class="tab-comments__quantity quantity_tab-comments span_mod">
+                  <a href="#">4</a>
+                </span>
               </div>
             </div>
             <div class="description">
@@ -142,7 +151,7 @@
         </div>
       </div>
       <div class="post">
-        <div class="icon icon_video"></div>
+        <div class="icons icons_video"></div>
         <div class="post__video">
           <div style="padding:56.25% 0 0 0;position:relative;">
             <iframe src="https://player.vimeo.com/video/47706295?color=e8603c" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -158,16 +167,24 @@
             <div class="promo-inner__tab">
               <div class="tab-date">
                 <h3 class="tab-date__heading h3-heading_bebas">Date</h3>
-                <span class="tab-date__dny date__dny_another span_mod">Jule 25, 2018</span>
+                <span class="tab-date__dny date__dny_another span_mod">
+                  <a href="#">Jule 25, 2018</a>
+                </span>
               </div>
               <div class="tab-tags">
                 <h3 class="tab-tags__tags h3-heading_bebas">Tags</h3>
-                <span class="tag tags_1 span_mod">Website</span>
-                <span class="tag tags_2 span_mod">Design</span>
+                <span class="tag tags_1 span_mod">
+                  <a href="#">Website</a>
+                </span>
+                <span class="tag tags_2 span_mod">
+                  <a href="#">Design</a>
+                </span>
               </div>
               <div class="tab-comments">
                 <h3 class="tab-comments__comments h3-heading_bebas">comments</h3>
-                <span class="tab-comments__quantity quantity_tab-comments span_mod">4</span>
+                <span class="tab-comments__quantity quantity_tab-comments span_mod">
+                  <a href="#">4</a>
+                </span>
               </div>
             </div>
             <div class="description">
@@ -189,7 +206,7 @@
         </div>
       </div>
       <blockquote class="blockquote">
-        <div class="icon icon_blockquote"></div>
+        <div class="icons icons_blockquote"></div>
         <div class="blockquote-block">
           <span class="blockquote-block__comma">,,</span>
 
@@ -203,7 +220,7 @@
       </blockquote>
       <div class="bottom-line"></div>
       <div class="link">
-        <div class="icon icon_link"></div>
+        <div class="icons icons_link"></div>
         <h2 class="link__heading heading_color">
           SOME OF THE BEST FREEBIES ON THE WEB
         </h2>
@@ -309,21 +326,21 @@
     </aside>
 
   </div>
-  <div class="page__container">
-    <div class="pagination">
-      <div class="pagination__page">
-        <a href="#" class="page-pagination">1</a>
-      </div>
-      <div class="pagination__page">
-        <a href="#" class="page-pagination">2</a>
-      </div>
-      <div class="pagination__page">
-        <a href="#" class="page-pagination">3</a>
-      </div>
+
+</div>
+<div class="page__container">
+  <div class="pagination">
+    <div class="pagination__page">
+      <a href="#" class="page-pagination">1</a>
+    </div>
+    <div class="pagination__page">
+      <a href="#" class="page-pagination">2</a>
+    </div>
+    <div class="pagination__page">
+      <a href="#" class="page-pagination">3</a>
     </div>
   </div>
 </div>
-
 <!-- end header -->
 
 {# partial example #} {% include "partials/_header.html" %}
